# kindle-notes

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/writer/: exporter.rs  utils.rs
