[package]
name = "kinotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
polars = { version = "0.24.3", features = ["json", "lazy"] }
regex = "1.7.2"
umya-spreadsheet = "0.9.1"
